<resources>
    <!-- Здесь добавляем свои цвета -->
    <!-- Использовать в XML: @string/app_name -->
    <!-- Использовать в коде: getString(R.string.app_name) -->
    <!-- В textView.setText(param) можно передовать не getString(id), а только id -->
    <string name="app_name">SamsungApplication</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="start_second_activity">Start Second Activity</string>
    <string name="choose_file">Choose File</string>
    <string name="hint">Enter text here</string>
</resources>